--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,16 @@
 <h1>Posts Index Page</h1>
 
+<div class='row'>
+  <div class='col-2'>
+  </div>
+  <div class='col-10'>
+    <% @posts.each do |post| %>
+        <li class='list-group-item'>
+      <%= link_to post do %>
+          <h3> Title: <%= post.title %></h3>
+      <% end %>
+          <h4> Body: <%= post.body %> </h4>
+        </li>
+    <% end %>
+  </div>
+</div>
