--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,12 @@
-<h1>Posts Index Page</h1>
-
-<div class='row'>
-  <div class='col-2'>
-  </div>
-  <div class='col-10'>
+<div class="card-deck">
     <% @posts.each do |post| %>
-        <li class='list-group-item'>
-      <%= link_to post do %>
-          <h3> Title: <%= post.title %></h3>
-      <% end %>
-          <h4> Body: <%= post.body %> </h4>
-        </li>
+        <div class="card mb-4" style="width:30rem;">
+        <div class="card-body">
+            <%= link_to post do %>
+                <h3 class="card-title"><%= post.title %></h3>
+            <% end %>
+            <h5 class="card-text"><%= post.body %> </h5>
+        </div>
+    </div>
     <% end %>
-  </div>
 </div>
