--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,24 @@
-<h1>Post Show Page</h1>
+<h2><%= @post.title %></h2>
+<h5><%= @post.body %> </h5>
 
-<h2>Id: <%= @post.id %> </h2>
-<h3> Title: <%= @post.title %></h3>
-<h4> Body: <%= @post.body %> </h4>
-
+<p>
+    Posted <%= time_ago_in_words(@post.created_at) %> ago
+</p>
 <div>
     <%= link_to(
         "Edit", edit_post_path(@post),
-        class: 'btn btn-info'
+        class: 'btn btn-outline-primary'
     )%>
     <%= link_to(
         "Delete", post_path(@post),
         method: :delete,
-        class: 'btn btn-danger',
+        class: 'btn btn-outline-danger',
         data: { confirm: 'Are you sure?' }
     )%>
 </div>
 
 <hr />
-
+<h3>Comment</h3>
 <%= form_for [@post, @comment] do |f| %>
   <% if @comment.errors.present? %>
     <p>
@@ -26,17 +26,21 @@
     </p>
   <% end %>
   <div>
-    <%= f.label :body %>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :placeholder => "What's on your mind?", cols: 80, rows: 5 %>
   </div>
-  <%= f.submit %>
+  <br>
+  <%= f.submit "Submit", class: 'btn btn-outline-primary'%>
 <% end %>
-
+<br>
 <ul class="list-group answer-list">
   <% @comments.each do |comment| %>
     <li class="list-group-item">
       <p>
         <%= comment.body %><br />
+        <small>
+        Commented <%= time_ago_in_words(comment.created_at) %> ago
+        </small>  
+        <small>&nbsp &#8226</small>
         <small>
           <%= link_to(
             "Delete",
@@ -45,12 +49,8 @@
             data: {
               confirm: "Are you sure?"
             },
-            class: 'btn btn-danger btn-sm',
+            class: 'btn btn-link',
           ) %>
-        </small>
-        |
-        <small>
-        Answered <%= time_ago_in_words(comment.created_at) %>
         </small>
       </p>
     </li>
