--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,20 @@
 <nav>
-    <span>Blog On Rails</span>
-    <%=link_to 'Home Page', "/" %>
-    <%=link_to 'New Post Page', new_post_path%>
+    <div class="container-fluid">
+        <div class="row" style="justify-content: space-around;">
+            <div class="col-6 ">
+                <h3 class="nav-link">
+                    <%=link_to 'Blog on Rails', "/" %>
+                </h3>
+            </div>
+
+            <div class="col-6 text-right">
+                <h3 class="d-inline-block nav-link">
+                    <%=link_to 'Home', "/" %>
+                </h3>
+                <h3 class="d-inline-block nav-link">
+                    <%=link_to 'New Post', new_post_path%>
+                </h3>
+            </div>
+        </div>
+    </div>
 </nav>
