--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,17 @@
-.card {
-min-width: 30%;
+@media (min-width: 576px) {
+    .card {
+        min-width: 46%;
+    }
 }
+
+@media (min-width: 992px) { 
+    .card {
+        min-width: 35%;
+    }
+ }
+
+@media (min-width: 1200px) {
+    .card {
+        min-width: 31%;
+    }
+ }
