--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card-deck">
     <% @posts.each do |post| %>
-        <div class="card mb-4" style="width:30rem;">
+        <div class="card mb-4">
         <div class="card-body">
             <%= link_to post do %>
                 <h3 class="card-title"><%= post.title %></h3>
