add sessions controller, add new create and destroy actions for sessions controller, add new page for sessions, add sessison route, add authentication to posts and comments controllers, and login to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,4 +17,13 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <% if user_signed_in? %>
+            <%= link_to "Logout", session_path, method: :delete, class: 'btn btn-danger' %>
+            <%= current_user.first_name %> <%= current_user.last_name %>
+        <% else %>
+            <%= link_to "Log In", new_session_path, class: 'btn btn-success'%>
+        <% end %>
+    </div>
 </nav>
