--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,13 @@
     <%= render 'shared/navbar'%>
 
     <div class="container-fluid" >
-      <%= yield %>
+    <% flash.each do |type, message| %>
+        <div class='bg-<%= type %> p-3 rounded mb-2 shadow-sm'>
+          <%= message %>
+    </div>
+    <% end %>
+    
+    <%= yield %>
     </div>
   </body>
 </html>
