--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,14 @@
 <nav>
     <div class="container-fluid">
         <div class="row" style="justify-content: space-around;">
-            <div class="col-6 ">
+
+            <div class="col-5 ">
                 <h3 class="nav-link">
                     <%=link_to 'Blog on Rails', "/" %>
                 </h3>
             </div>
 
-            <div class="col-6 text-right">
+            <div class="col-5 text-right">
                 <h3 class="d-inline-block nav-link">
                     <%=link_to 'Home', "/" %>
                 </h3>
@@ -15,15 +16,18 @@
                     <%=link_to 'New Post', new_post_path%>
                 </h3>
             </div>
+            
+            <div class="col-2 text-right">
+                <h3 class="d-inline-block nav-link">
+                    <% if user_signed_in? %>
+                        <%= link_to "Logout", session_path, method: :delete, class: 'btn btn-danger' %>
+                        <%= current_user.first_name %> <%= current_user.last_name %>
+                    <% else %>
+                        <%= link_to "Log In", new_session_path, class: 'btn btn-success'%>
+                    <% end %>
+                </h3>
+            </div>
+            
         </div>
-    </div>
-
-    <div>
-        <% if user_signed_in? %>
-            <%= link_to "Logout", session_path, method: :delete, class: 'btn btn-danger' %>
-            <%= current_user.first_name %> <%= current_user.last_name %>
-        <% else %>
-            <%= link_to "Log In", new_session_path, class: 'btn btn-success'%>
-        <% end %>
     </div>
 </nav>
