add custom routes for edit_password and update_password, add custom actions for edit_password and update_password, add edit_password page, add link to edit_password on edit page, fix spacing on navbar

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -35,7 +35,9 @@
 
             <%= f.submit("Create User", class: 'btn btn-outline-primary') %>
         <% else %>
-            <%= f.submit("Update User", class: 'btn btn-outline-primary') %>          
+            <%= f.submit("Update User", class: 'btn btn-outline-primary') %>
+            <hr>
+            <%= link_to "Change Password", edit_password_path %>          
         <% end %>
 
     <% end %>
