--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -5,21 +5,21 @@
   </p>
 <% end %>
 <div class='shadow-sm p-3 mb-5 bg-white rounded'>
-    <%= form_with model: @user, local: true do |f| %>
+    <%= form_with model: @user, url: update_password_path(@user), method: :patch, local: true do |f| %>
 
         <div class='form-group'>
-            <%= f.label :password%>
-            <%= f.password_field :password, class: 'form-control' %>
+            <%= f.label :current_password%>
+            <%= f.password_field :current_password, class: 'form-control' %>
         </div>
 
         <div class='form-group'>
             <%= f.label :new_password%>
-            <%= f.password_field :password, class: 'form-control' %>
+            <%= f.password_field :new_password, class: 'form-control' %>
         </div>
 
         <div class='form-group'>
             <%= f.label :new_password_confirmation%>
-            <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <%= f.password_field :new_password_confirmation, class: 'form-control' %>
         </div>
 
         <%= f.submit("Update Password", class: 'btn btn-outline-primary') %>
